--- a/.gitignore
+++ b/.gitignore
@@ -164,12 +164,7 @@ cython_debug/
 #.idea/
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+.vscode
 
 # Local History for Visual Studio Code
 .history/
@@ -190,5 +185,7 @@ cython_debug/
 
 # Ignore MNIST datatset
 datasets
+
+
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
